add some features

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" media="screen and (max-width: 800px)" href="./Style/mediaqueries/_800width.scss" />
 </head>
 <body>
+    <!--
     <section class="pre--loader">
         <div class="loading__container">
             <div class="loading__move">
@@ -26,6 +27,7 @@
             </p>
         </div>
     </section>
+    -->
     <header class="navbar">
         <div class="navbar__logo">
             <img src="./Media/Image/Navbar/pj logo.png" alt="pj studio icon" loading="lazy">
@@ -114,6 +116,10 @@
         </div>
     </section>
     <section class="process hidden">
+            <h4 class="process__header">
+                Our 
+                Process
+            </h4>
             <div class="process__container">
                 <div class="process__title__container">
                     <div class="process__title">
