--- a/index.html
+++ b/index.html
@@ -85,6 +85,22 @@
             <div class="hero__type--selector">
                 <button class="hero__button btn">
                     Try free demo <i class="fa fa-arrow-down hero_icon"></i>
+                    <div class="demo__container">
+                        <ul>
+                            <li>
+                                Try Our Web Flow Demo
+                            </li>
+                            <li>
+                                Try Our Web.App Flow Demo
+                            </li>
+                            <li>
+                                Try Our ios App Flow Demo
+                            </li>
+                            <li>
+                                Try Our Android App Flow Demo
+                            </li>
+                        </ul>
+                    </div>
                 </button>
                 <p class="hero__device--type">
                     Web, iOs and Android
