--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <div class="demo__container">
                         <ul>
                             <li>
-                                Try Our Web Flow Demo
+                                Try Our Web Flow Demoo
                             </li>
                             <li>
                                 Try Our Web.App Flow Demo
