add bottom arrow to the process section

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                             </li>
                             <li>
                                 Try Our Web.App Flow Demo
+                                <i class="fa-solid fa-arrow-down"></i>
                             </li>
                             <li>
                                 Try Our ios App Flow Demo
