--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="loading__content">
             <p>
-                یگ لحظه واستا
+                یگ لحظه واستا d
             </p>
         </div>
     </section>
