remove register photo background and add more responsivable componant

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                     </button>
                 </div>
                 <div class="register__left">
-                    <img src="./Media/Image/register/SignUp.jpg">
+                    <img src="./Media/Image/register/SignUp.png">
                 </div>
             </div>
     </section>
